# TestMechine

./: A_Button.qml  A_TextInput.qml  CMakeLists.txt  Main.qml  SystemParameters.qml  main.cpp  modbuscontrol.cpp  modbuscontrol.h  readwritecsv.cpp  readwritecsv.h  threadmanager.cpp  threadmanager.h
